--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11"
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.11",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.1.5"
   }
 }
