--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.0",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.11",
     "astro-icon": "^1.1.5",
